--- a/scss/index.scss
+++ b/scss/index.scss
@@ -384,7 +384,7 @@ body {
                 height: 150px;
                 border: 1px solid #e5e5e5;
                 position: absolute;
-                background: red;
+                background: white;
 
                 p {
                     height: 60px;
@@ -816,70 +816,49 @@ body {
         }
     }
 
-    .sp-list {
+    .liebiao_wrap {
+      .liebiao {
+        margin: 0 auto;
+        width: 1090px;
         display: flex;
+        flex-wrap: wrap;
         justify-content: space-between;
-
-        .sp-1{
-            background:white;
-
-          
-            margin-top: 20px;
-            width: 350px;
-            height: 470px;
-
-            .img{
-             
-                display: block;
-                width: 330px;
-                height: 346px;
-                text-decoration: none;
-                color: black;
-                background: url("http://p4.jmstatic.com/product/004/970/4970404_std/4970404_dx_1000_400.jpg") no-repeat center/cover;
-                // background: yellow;
-                margin: 10px;
-
-                .jisu {
-                    margin: 6px;
-                }
-
-                .cat-che{
-                    position: absolute;
-                    // width: 50px;
-                    height: 35px;
-                    background: #ed145b;
-                    line-height: 35px;
-                    margin-left: 220px;
-                    margin-top: -40px;
-                    display: none;
-
-                }
-                .text{
-                  
-                    width: 100%;
-                    height: 30px;
-                    line-height: 30px;
-                    font-size: 14px;
-                    background:blueviolet;
-                    text-align: center;
-                    margin-top:79% ;
-                    display: none;
-                }
-               
+        align-content: space-around;
+        figure {
+          margin-top: 20px;
+          background-color: #fff;
+          width: 330px;
+          height: 470px;
+          padding: 10px;
+          // border: 1px solid red;
+          a {
+            display: block;
+            width: 330px;
+            height: 345px;
+            overflow: hidden;
+            img {
+              margin-left: -238px;
+              height: 345px;
             }
-            .title{
-                width: 338px;
-                height: 48px;
-                margin: auto;
-                color: #333;
-                line-height: 24px;
-                font-size: 14px;
-                margin:10px  auto;
-            }
-
-
+          }
+          p {
+            font-size: 14px;
+            margin-top: 10px;
+            line-height: 24px;
+            color: #333;
+          }
+          b {
+            font-size: 22px;
+            color: #ed145b;
+            line-height: 45px;
+            font-weight: 400;
+          }
         }
+      }
     }
+
+
+
 }
 
 
