--- a/scss/xiangqing.css
+++ b/scss/xiangqing.css
@@ -108,133 +108,133 @@
   font-size: 14px;
 }
 
-.xiangqing {
+.xq {
   width: 1090px;
-  height: 607px;
-  padding-bottom: 30px;
-  margin-top: 20px;
-  margin: auto;
-  border: 2px solid #888;
+  margin: 0 auto;
 }
 
-.xiangqing .zuo-x {
-  height: 607px;
-  padding-bottom: 30px;
-  width: 702px;
+.xq_wrap .xq {
+  height: 470px;
+}
+
+.xq_wrap .xq .xq_tu {
+  margin-left: 0px;
+  margin-top: 50px;
   float: left;
-}
-
-.xiangqing .zuo-x .title {
-  font-size: 18px;
+  width: 575px;
+  height: 360px;
   overflow: hidden;
-  height: 107px;
-  word-break: normal;
-  width: 630px;
-  color: #000;
-  background: #f8f8f8;
-  padding: 5px 25px 20px 48px;
+  border: 1px solid #eeeeee;
+  position: relative;
 }
 
-.xiangqing .zuo-x img {
-  display: block;
-  width: 702px;
-  border: 1px solid #888;
+.xq_wrap .xq .xq_tu img {
+  height: 100%;
+  width: 100%;
 }
 
-.xiangqing .zuo-x .biaoqian {
-  width: 648px;
-  float: right;
-  height: 25px;
-  margin-top: 18px;
+.xq_wrap .xq .xq_tu .lens {
+  width: 200px;
+  height: 200px;
+  position: absolute;
 }
 
-.xiangqing .zuo-x .biaoqian a {
-  height: 25px;
-  text-decoration: none;
-  display: inline-block;
-  border: 1px solid #888;
-  padding: 0 5px;
-  margin: 0 10px;
-  font-size: 14px;
-  line-height: 25px;
-  text-align: center;
-  color: #888;
-}
-
-.xiangqing .zuo-x .biaoqian .fenxiang {
-  float: right;
-  margin-right: 0px;
-  font-size: 14px;
-  color: #888;
-}
-
-.xiangqing .you-x {
+.xq_wrap .xq .xq_tu1 {
+  margin-left: 0px;
+  margin-top: 50px;
   float: left;
-  width: 330px;
-  height: 578px;
-  padding: 29px;
+  width: 400px;
+  height: 400px;
+  top: 100px;
+  left: 800px;
+  overflow: hidden;
+  position: absolute;
+  display: none;
 }
 
-.xiangqing .you-x .frist {
-  display: flex;
-  margin-bottom: 25px;
+.xq_wrap .xq .xq_tu1 img {
+  width: 1150px;
+  height: 720px;
+  opacity: 0;
+  position: absolute;
 }
 
-.xiangqing .you-x .frist .tupian1 {
-  width: 160px;
-  height: 80px;
-  margin-right: 10px;
+.xq_wrap .xq .xq_xinxi {
+  float: left;
+  width: 400px;
+  height: 300px;
+  margin: 80px 0 0 60px;
 }
 
-.xiangqing .you-x .frist .tupian2 {
-  width: 62px;
-  height: 41px;
-  margin-right: 10px;
-  margin-top: 20px;
-}
-
-.xiangqing .you-x .frist .tupian3 {
-  line-height: 80px;
-  color: #888;
-}
-
-.xiangqing .you-x .jiage {
-  width: 330px;
-  height: 120px;
-  border-top: 1px dashed black;
-  border-bottom: 1px dashed black;
-}
-
-.xiangqing .you-x .jiage p {
-  height: 37px;
-  font-size: 37px;
-  margin-top: 30px;
-}
-
-.xiangqing .you-x .goumai {
-  padding: 20px 0;
-}
-
-.xiangqing .you-x .xinghao {
-  width: 330px;
-  height: 160px;
-  border-top: 1px dashed black;
-  border-bottom: 1px dashed black;
-}
-
-.xiangqing .you-x .xinghao p {
-  font-size: 14px;
-  color: #888;
-  margin-top: 20px;
-}
-
-.xiangqing .you-x .cat {
-  display: block;
-  width: 100px;
-  height: 40px;
-  background: orangered;
-  color: white;
-  text-align: center;
+.xq_wrap .xq .xq_xinxi h2 {
+  font-size: 16px;
+  color: #636363;
   line-height: 40px;
-  margin: 30px auto;
+  font-weight: 600;
+}
+
+.xq_wrap .xq .xq_xinxi h3 {
+  font-size: 16px;
+  color: #636363;
+  line-height: 40px;
+}
+
+.xq_wrap .xq .xq_xinxi b {
+  font-size: 14px;
+  line-height: 50px;
+  color: #939393;
+}
+
+.xq_wrap .xq .xq_xinxi b span {
+  font-size: 20px;
+  color: #dd467d;
+}
+
+.xq_wrap .xq .xq_xinxi .che {
+  margin-top: 20px;
+}
+
+.xq_wrap .xq .xq_xinxi .che .tianjia {
+  width: 70px;
+  height: 46px;
+  text-align: center;
+  float: left;
+}
+
+.xq_wrap .xq .xq_xinxi .che .tianjia #zhi {
+  width: 42px;
+  height: 42px;
+  border: 1px solid #636363;
+  line-height: 44px;
+  border-right: none;
+  float: left;
+  text-indent: 14px;
+}
+
+.xq_wrap .xq .xq_xinxi .che .tianjia #jia {
+  width: 15px;
+  float: left;
+  border: 1px solid #636363;
+  height: 22px;
+  border-bottom: none;
+  cursor: pointer;
+}
+
+.xq_wrap .xq .xq_xinxi .che .tianjia #jian {
+  width: 15px;
+  float: left;
+  border: 1px solid #636363;
+  cursor: pointer;
+  height: 20px;
+}
+
+.xq_wrap .xq .xq_xinxi .che button {
+  float: left;
+  width: 142px;
+  height: 46px;
+  background-color: #df3133;
+  border: none;
+  margin-left: 50px;
+  color: #fff;
+  border-radius: 5px;
 }
