--- a/scss/xiangqing.scss
+++ b/scss/xiangqing.scss
@@ -117,164 +117,122 @@
 }
 
 //商品详情
-.xiangqing {
+.xq {
     width: 1090px;
-    height: 607px;
-    padding-bottom: 30px;
-    margin-top: 20px;
-    margin: auto;
-    // background: red;
-    border: 2px solid #888;
-
-    .zuo-x {
-        height: 607px;
-        padding-bottom: 30px;
-        width: 702px;
+    margin: 0 auto;
+  }
+  
+  .xq_wrap {
+    .xq {
+      height: 470px;
+      .xq_tu {
+        margin-left: 0px;
+        margin-top: 50px;
         float: left;
-
-        .title {
-
-            font-size: 18px;
-            overflow: hidden;
-            height: 107px;
-            word-break: normal;
-            width: 630px;
-            color: #000;
-            // background: #fff;
-            background: #f8f8f8;
-            padding: 5px 25px 20px 48px;
-
-
-        }
-
+        width: 575px;
+        height: 360px;
+        overflow: hidden;
+        border: 1px solid #eeeeee;
+        position: relative;
         img {
-            display: block;
-            width: 702px;
-            border: 1px solid #888;
+          height: 100%;
+          width: 100%;
         }
-
-        .biaoqian {
-            width: 648px;
-            float: right;
-            height: 25px;
-            // background:red;
-            margin-top: 18px;
-
-            a {
-                height: 25px;
-                text-decoration: none;
-                display: inline-block;
-                border: 1px solid #888;
-                padding: 0 5px;
-                margin: 0 10px;
-                font-size: 14px;
-                line-height: 25px;
-                text-align: center;
-                color: #888;
-
-            }
-
-            .fenxiang {
-                float: right;
-                margin-right: 0px;
-                font-size: 14px;
-                color: #888;
-            }
-
+        .lens {
+          width: 200px;
+          height: 200px;
+          position: absolute;
         }
-
-    }
-
-    .you-x {
+      }
+      .xq_tu1 {
+        margin-left: 0px;
+        margin-top: 50px;
         float: left;
-        width: 330px;
-        height: 578px;
-        // background: red;
-        padding: 29px;
-
-        .frist {
-
-            // background: yellow;
-            display: flex;
-            margin-bottom: 25px;
-
-            .tupian1 {
-                width: 160px;
-                height: 80px;
-                margin-right: 10px;
-            }
-
-            .tupian2 {
-                width: 62px;
-                height: 41px;
-                margin-right: 10px;
-                margin-top: 20px;
-
-            }
-
-            .tupian3 {
-                line-height: 80px;
-                color: #888;
-            }
-
+        width: 400px;
+        height: 400px;
+        top: 100px;
+        left: 800px;
+        overflow: hidden;
+        // border: 1px solid #eeeeee;
+        position: absolute;
+        display: none;
+        img {
+          width: 1150px;
+          height: 720px;
+          opacity: 0;
+          position: absolute;
         }
-
-        .jiage {
-            width: 330px;
-            height: 120px;
-            border-top: 1px dashed black;
-            border-bottom: 1px dashed black;
-
-            p {
-
-                height: 37px;
-                font-size: 37px;
-                margin-top: 30px;
-
-            }
-
+      }
+      .xq_xinxi {
+        float: left;
+        width: 400px;
+        height: 300px;
+        margin: 80px 0 0 60px;
+  
+        h2 {
+          font-size: 16px;
+          color: #636363;
+          line-height: 40px;
+          font-weight: 600;
         }
-
-
-
-
-        .goumai {
-            padding: 20px 0;
+        h3 {
+          font-size: 16px;
+          color: #636363;
+          line-height: 40px;
+          // font-weight: 600;
         }
-
-        .xinghao {
-            width: 330px;
-            height: 160px;
-            border-top: 1px dashed black;
-            border-bottom: 1px dashed black;
-
-            p {
-                font-size: 14px;
-                color: #888;
-                margin-top: 20px;
-            }
-
-
+        b {
+          font-size: 14px;
+          line-height: 50px;
+          color: #939393;
+          span {
+            font-size: 20px;
+            color: #dd467d;
+          }
         }
-        .cat{
-            display: block;
-            width:100px;
-            height: 40px;
-            background:orangered;
-            color: white;
+        .che {
+          margin-top: 20px;
+          .tianjia {
+            width: 70px;
+            height: 46px;
             text-align: center;
-            line-height:40px;
-            margin:30px auto;
+            float: left;
+            #zhi {
+              width: 42px;
+              height: 42px;
+              border: 1px solid #636363;
+              line-height: 44px;
+              border-right: none;
+              float: left;
+              text-indent: 14px;
+            }
+            #jia {
+              width: 15px;
+              float: left;
+              border: 1px solid #636363;
+              height: 22px;
+              border-bottom: none;
+              cursor: pointer;
+            }
+            #jian {
+              width: 15px;
+              float: left;
+              border: 1px solid #636363;
+              cursor: pointer;
+              height: 20px;
+            }
+          }
+          button {
+            float: left;
+            width: 142px;
+            height: 46px;
+            background-color: #df3133;
+            border: none;
+            margin-left: 50px;
+            color: #fff;
+            border-radius: 5px;
+          }
         }
-
-
+      }
     }
-
-
-
-
-
-
-
-
-}
+  }
